# camelmailer-migrate

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: history.rs  main.rs  postal.rs  target.rs
src/sources/: mailgun.rs  mod.rs  postmark.rs  resend.rs  sendgrid.rs
