[package]
name = "camelmailer-migrate"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
license = "MIT"
description = "Migrate a Postal installation to CamelMailer: servers, domains (with their DKIM keys), credentials, webhooks, routes and IP pools, read straight from Postal's database."
repository = "https://github.com/camelmailer/camelmailer-migrate"
homepage = "https://camelmailer.com/docs/migrate/postal"
readme = "README.md"
keywords = ["email", "postal", "camelmailer", "migration", "smtp"]
categories = ["command-line-utilities", "email"]

[[bin]]
name = "camelmailer-migrate"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "mysql",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
url = "2"

[profile.release]
strip = true
lto = "thin"
