[package]
name = "camelmailer-migrate"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
license = "MIT"
description = "Migrate a Postal installation to CamelMailer: servers, domains (with their DKIM keys), credentials, webhooks, routes and IP pools, read straight from Postal's database."
repository = "https://github.com/camelmailer/camelmailer-migrate"
homepage = "https://camelmailer.com/docs/migrate/postal"
readme = "README.md"
keywords = ["email", "postal", "camelmailer", "migration", "smtp"]
categories = ["command-line-utilities", "email"]

[[bin]]
name = "camelmailer-migrate"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "mysql",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
url = "2"

[profile.release]
strip = true
lto = "thin"

[package.metadata.deb]
maintainer = "Michael Döhler <michaeldoehler@me.com>"
copyright = "2026, CamelMailer"
license-file = ["LICENSE", "0"]
section = "mail"
priority = "optional"
extended-description = """\
Migrate a Postal installation to CamelMailer. Reads Postal's database directly \
and recreates its configuration (servers, domains with their DKIM keys, \
credentials, webhooks, routes and IP pools) through the CamelMailer admin API, \
against either the hosted cloud or a self-hosted install."""
assets = [
    ["target/release/camelmailer-migrate", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/camelmailer-migrate/README.md", "644"],
]
